Adds Java 11 backwards comp